--- a/package.json
+++ b/package.json
@@ -1,22 +1,40 @@
 {
   "name": "@yunmoan/koishi-plugin-mc-whitelist",
   "description": "支持Miectrat白名单添加绑定",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
     "lib",
     "dist"
   ],
-  "license": "MIT",
+  "license": "GPL-3.0",
+  "homepage": "https://rcn.zyghit.cn",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alice/koishi-plugin-example.git"
+  },
   "scripts": {},
   "keywords": [
     "chatbot",
     "koishi",
-    "plugin"
+    "plugin",
+    "whitelist",
+    "easywhitelist",
+    "mcwhitelist",
+    "minecraft"
   ],
-  "devDependencies": {},
+  "dependencies": {
+    "@satorijs/element": "^3.1.7",
+    "rcon-ts": "^1.2.3"
+  },
   "peerDependencies": {
     "koishi": "^4.18.3"
+  },
+  "koishi": {
+    "service": {
+      "required": ["database","rcon-ts"],
+      "optional": ["assets","database-mysql"]
+    }
   }
 }
