feat(plugin): 优化 Minecraft 白名单绑定插件
- 支持白名单热添加
-保存到 Koishi 内置数据库
- 可限制单个账户绑定玩家 ID 的个数
- 支持自助绑定/解绑（可由管理员辅助）
-管理员可通过此插件远程执行命令
- 增加查询绑定和删除绑定功能- 优化用户界面和错误处理

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@yunmoan/koishi-plugin-mc-whitelist",
-  "description": "基于easywhitelist插件支持Miectrat白名单添加绑定",
-  "version": "1.0.1",
+  "description": "基于easywhitelist插件支持Minecraft白名单添加绑定",
+  "version": "1.1.0",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
@@ -9,7 +9,7 @@
     "dist"
   ],
   "license": "GPL-3.0",
-  "homepage": "https://rcn.zyghit.cn",
+  "homepage": "https://www.zyghit.cn",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Yunmoan/koishi-plugin-mc-whitelist.git"
@@ -22,7 +22,8 @@
     "whitelist",
     "easywhitelist",
     "mcwhitelist",
-    "minecraft"
+    "minecraft",
+    "mc"
   ],
   "dependencies": {
     "@satorijs/element": "^3.1.7",
