feat(plugin): 优化游戏 ID验证逻辑并添加新功能- 在绑定、解绑和删除绑定命令中增加了对游戏 ID长度的限制，不得超过16 位 - 添加了查询指定用户绑定的命令，仅限管理员使用 - 优化了错误提示信息，使其更加详细和友好 - 更新了插件描述，更准确地反映了功能

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@yunmoan/koishi-plugin-mc-whitelist",
-  "description": "基于easywhitelist插件支持Minecraft白名单添加绑定",
-  "version": "1.1.0",
+  "description": "基于 RCON 实现的支持Minecraft白名单添加绑定",
+  "version": "1.1.1",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
