feat(mc-whitelist): 添加管理员手动绑定功能并优化绑定逻辑
- 新增手动绑定命令，允许管理员为其他用户绑定游戏ID
- 优化玩家ID验证逻辑，修正长度限制
- 增加绑定数量限制检查
- 修复重复绑定问题
- 更新版本号至1.1.2

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@yunmoan/koishi-plugin-mc-whitelist",
   "description": "基于 RCON 实现的支持Minecraft白名单添加绑定",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
@@ -41,5 +41,8 @@
       "required": ["database","rcon-ts"],
       "optional": ["assets","database-mysql"]
     }
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   }
 }
