fix(mc-whitelist): 修复玩家 ID 验证逻辑
-将玩家 ID 长度的判断条件从小于 16位改为大于 16 位
- 优化了玩家 ID验证的正则表达式- 更新了错误提示信息

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@yunmoan/koishi-plugin-mc-whitelist",
   "description": "基于 RCON 实现的支持Minecraft白名单添加绑定",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
@@ -38,8 +38,14 @@
       "zh": "基于RCON实现的Minecraft服务器白名单绑定插件"
     },
     "service": {
-      "required": ["database","rcon-ts"],
-      "optional": ["assets","database-mysql"]
+      "required": [
+        "database",
+        "rcon-ts"
+      ],
+      "optional": [
+        "assets",
+        "database-mysql"
+      ]
     }
   },
   "publishConfig": {
